--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,4 +122,24 @@
         android:text="start"
         android:textSize="30sp"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp"
+        >
+
+
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click me more Then 2 seconds"
+        android:textColor="#00BCD4"
+        android:textSize="20sp"
+        />
+    </LinearLayout>
+
+
 </RelativeLayout>
